--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,7 +1,52 @@
+#quote-menu {
+    padding: 2%;
+    position: absolute;
+    background: $menu-bg;
+    left: 5%;
+    bottom: -20%;
+    width: 58px;
+    height: auto;
+    border-radius: 20%;
+    z-index: 9;
+    transform: scale(0);
+    transition: transform 0.3s ease;
+    transform-origin: bottom left;
+}
+
+#quote-section:hover #quote-menu {
+    transform: scale(1);
+}
+
+#quote-menu li {
+    list-style-type: none;
+    padding: 20%;
+    border-radius: 18%;
+    width: 100%;
+    text-align: left;
+}
+
+#quote-menu li:hover {
+    background: $menu-hover-item;
+}
+
 .toggle {
     background: transparent;
     color: white;
     border: none;
     cursor: pointer;
     outline: none;
+}
+
+.todo-container button {
+    border: none;
+    padding: 8px;
+    cursor: pointer;
+    background-color: transparent;
+    color: white;
+    border-radius: 10px;
+    font-size: 2vh;
+}
+
+.todo-container button:hover {
+    background-color: $menu-hover-item;
 }
