--- a/sass/layout/_todolist.scss
+++ b/sass/layout/_todolist.scss
@@ -6,15 +6,16 @@
 
 #todo-title {
     display: flex;
-    padding: 2%;
+    margin: 0 1%;
+    padding: 2.5%;
     justify-content: flex-end;
 }
 
 #todo-toggle-container {
     background-color: #23232381;
     padding: 5%;
-    margin: 0 5%;
-    border-radius: 6%;
+    margin: 0 2.5%;
+    border-radius: 10px;
 }
 
 .todo-toggle {
@@ -24,6 +25,7 @@
 #todo-input-container {
     display: flex;
     justify-content: space-between;
+    padding-bottom: 3%;
 }
 
 #todo-input-container input {
@@ -36,6 +38,10 @@
 }
 
 .todo-list li {
-    padding: 8px;
+    padding: 2%;
     display: flex;
+}
+
+.todo-list span {
+    padding: 8px;
 }
