added media queries

--- a/sass/main/styles.scss
+++ b/sass/main/styles.scss
@@ -1,4 +1,5 @@
 @import '../abstract/variables';
+@import '../abstract/media-queries';
 @import '../base/reset';
 @import '../base/animations';
 @import '../components/buttons';
