--- a/sass/layout/_greeting.scss
+++ b/sass/layout/_greeting.scss
@@ -6,11 +6,8 @@
 
 #name-container input[type=text] {
     font-size: 4vh; 
-}
-
-#name-container input[type=text] {
     width: 80%;
-    margin: 5px;
-    padding: 2px;
+    margin: auto;
+    padding: 5px 10px;
     text-align: center;
 }
