--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -26,7 +26,7 @@
     padding: 20%;
     border-radius: 18%;
     width: 100%;
-    text-align: left;
+    text-align: center;
 }
 
 #quote-menu li:hover {
