--- a/sass/layout/_focus.scss
+++ b/sass/layout/_focus.scss
@@ -11,8 +11,8 @@
 
 #focus-container input {
     width: 80%;
-    margin: 5px;
-    padding: 2px;
+    margin: auto;
+    padding: 5px 10px;
     text-align: center;
 }
 
